--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -16,83 +16,7 @@
 
         <ul class="list-inline float-right mb-0">
 
-          <!-- Messages-->
-          <!--<li class="list-inline-item dropdown notification-list">-->
-            <!--<a class="nav-link dropdown-toggle arrow-none waves-effect" data-toggle="dropdown" href="#" role="button"-->
-               <!--aria-haspopup="false" aria-expanded="false">-->
-              <!--<i class="mdi mdi-email-outline noti-icon"></i>-->
-              <!--<span class="badge badge-danger noti-icon-badge">3</span>-->
-            <!--</a>-->
-            <!--<div class="dropdown-menu dropdown-menu-right dropdown-arrow dropdown-menu-lg">-->
-              <!--&lt;!&ndash; item&ndash;&gt;-->
-              <!--<div class="dropdown-item noti-title">-->
-                <!--<h5><span class="badge badge-danger float-right">745</span>Messages</h5>-->
-              <!--</div>-->
 
-              <!--&lt;!&ndash; item&ndash;&gt;-->
-<!--&lt;!&ndash;              <a href="javascript:void(0);" class="dropdown-item notify-item">&ndash;&gt;-->
-<!--&lt;!&ndash;                <div class="notify-icon"><img src="assets/images/users/avatar-2.jpg" alt="user-img" class="img-fluid rounded-circle" /> </div>&ndash;&gt;-->
-<!--&lt;!&ndash;                <p class="notify-details"><b>Charles M. Jones</b><small class="text-muted">Dummy text of the printing and typesetting industry.</small></p>&ndash;&gt;-->
-<!--&lt;!&ndash;              </a>&ndash;&gt;-->
-
-<!--&lt;!&ndash;              &lt;!&ndash; item&ndash;&gt;&ndash;&gt;-->
-<!--&lt;!&ndash;              <a href="javascript:void(0);" class="dropdown-item notify-item">&ndash;&gt;-->
-<!--&lt;!&ndash;                <div class="notify-icon"><img src="assets/images/users/avatar-3.jpg" alt="user-img" class="img-fluid rounded-circle" /> </div>&ndash;&gt;-->
-<!--&lt;!&ndash;                <p class="notify-details"><b>Thomas J. Mimms</b><small class="text-muted">You have 87 unread messages</small></p>&ndash;&gt;-->
-<!--&lt;!&ndash;              </a>&ndash;&gt;-->
-
-<!--&lt;!&ndash;              &lt;!&ndash; item&ndash;&gt;&ndash;&gt;-->
-<!--&lt;!&ndash;              <a href="javascript:void(0);" class="dropdown-item notify-item">&ndash;&gt;-->
-<!--&lt;!&ndash;                <div class="notify-icon"><img src="assets/images/users/avatar-4.jpg" alt="user-img" class="img-fluid rounded-circle" /> </div>&ndash;&gt;-->
-<!--&lt;!&ndash;                <p class="notify-details"><b>Luis M. Konrad</b><small class="text-muted">It is a long established fact that a reader will</small></p>&ndash;&gt;-->
-<!--&lt;!&ndash;              </a>&ndash;&gt;-->
-
-<!--&lt;!&ndash;              &lt;!&ndash; All&ndash;&gt;&ndash;&gt;-->
-              <!--<a href="javascript:void(0);" class="dropdown-item notify-item">-->
-                <!--View All-->
-              <!--</a>-->
-
-            <!--</div>-->
-          <!--</li>-->
-          <!-- notification-->
-          <!--<li class="list-inline-item dropdown notification-list">-->
-            <!--<a class="nav-link dropdown-toggle arrow-none waves-effect" data-toggle="dropdown" href="#" role="button"-->
-               <!--aria-haspopup="false" aria-expanded="false">-->
-              <!--<i class="mdi mdi-bell-outline noti-icon"></i>-->
-              <!--<span class="badge badge-danger noti-icon-badge">3</span>-->
-            <!--</a>-->
-            <!--<div class="dropdown-menu dropdown-menu-right dropdown-arrow dropdown-menu-lg">-->
-              <!--&lt;!&ndash; item&ndash;&gt;-->
-              <!--<div class="dropdown-item noti-title">-->
-                <!--<h5>Notification (3)</h5>-->
-              <!--</div>-->
-
-<!--&lt;!&ndash;              &lt;!&ndash; item&ndash;&gt;&ndash;&gt;-->
-<!--&lt;!&ndash;              <a href="javascript:void(0);" class="dropdown-item notify-item active">&ndash;&gt;-->
-<!--&lt;!&ndash;                <div class="notify-icon bg-success"><i class="mdi mdi-cart-outline"></i></div>&ndash;&gt;-->
-<!--&lt;!&ndash;                <p class="notify-details"><b>Your order is placed</b><small class="text-muted">Dummy text of the printing and typesetting industry.</small></p>&ndash;&gt;-->
-<!--&lt;!&ndash;              </a>&ndash;&gt;-->
-
-<!--&lt;!&ndash;              &lt;!&ndash; item&ndash;&gt;&ndash;&gt;-->
-<!--&lt;!&ndash;              <a href="javascript:void(0);" class="dropdown-item notify-item">&ndash;&gt;-->
-<!--&lt;!&ndash;                <div class="notify-icon bg-warning"><i class="mdi mdi-message"></i></div>&ndash;&gt;-->
-<!--&lt;!&ndash;                <p class="notify-details"><b>New Message received</b><small class="text-muted">You have 87 unread messages</small></p>&ndash;&gt;-->
-<!--&lt;!&ndash;              </a>&ndash;&gt;-->
-
-<!--&lt;!&ndash;              &lt;!&ndash; item&ndash;&gt;&ndash;&gt;-->
-<!--&lt;!&ndash;              <a href="javascript:void(0);" class="dropdown-item notify-item">&ndash;&gt;-->
-<!--&lt;!&ndash;                <div class="notify-icon bg-info"><i class="mdi mdi-martini"></i></div>&ndash;&gt;-->
-<!--&lt;!&ndash;                <p class="notify-details"><b>Your item is shipped</b><small class="text-muted">It is a long established fact that a reader will</small></p>&ndash;&gt;-->
-<!--&lt;!&ndash;              </a>&ndash;&gt;-->
-
-              <!--&lt;!&ndash; All&ndash;&gt;-->
-              <!--<a href="javascript:void(0);" class="dropdown-item notify-item">-->
-                <!--View All-->
-              <!--</a>-->
-
-            <!--</div>-->
-          <!--</li>-->
-          <!-- User-->
           <li class="list-inline-item dropdown notification-list">
             <a class="nav-link dropdown-toggle arrow-none waves-effect nav-user" data-toggle="dropdown" href="#" role="button"
                aria-haspopup="false" aria-expanded="false">
@@ -139,10 +63,10 @@
           <li class="has-submenu" routerLinkActive="active">
             <a routerLink="/home" ><i class="ti-home"></i>Dashboard</a>
           </li>
-          <li class="has-submenu" routerLinkActive="active">
+          <li class="has-submenu" *ngxPermissionsOnly="['admin']" routerLinkActive="active">
             <a ><i class="ti-home"></i>User</a>
             <ul class="submenu">
-              <li class="has-submenu" *ngxPermissionsOnly="['admin']">
+              <li class="has-submenu">
                 <a href="#">Employee</a>
                 <ul class="submenu">
                   <li><a routerLink="employee" >Employee</a></li>
@@ -153,10 +77,10 @@
             </ul>
           </li>
 
-          <li class="has-submenu" routerLinkActive="active">
+          <li class="has-submenu" *ngxPermissionsOnly="['admin']" routerLinkActive="active">
             <a href="#"><i class="ti-bookmark-alt"></i>Settings</a>
             <ul class="submenu">
-              <li class="has-submenu" *ngxPermissionsOnly="['admin']">
+              <li class="has-submenu">
                 <a href="#">Roster</a>
                 <ul class="submenu">
                   <li><a routerLink="configuration/shift">All Roster</a></li>
@@ -207,7 +131,7 @@
           </li>
 
 
-          <li class="has-submenu" routerLinkActive="active">
+          <li class="has-submenu" *ngxPermissionsOnly="['admin']" routerLinkActive="active">
             <a href="#"><i class="fa fa-chart"></i>Report</a>
             <ul class="submenu">
               <li class="">
@@ -220,9 +144,9 @@
           <li class="has-submenu">
             <a href="#">Leave</a>
             <ul class="submenu">
-<!--              <li><a routerLink="leave/apply">Apply Leave</a></li>-->
+              <li><a *ngxPermissionsExcept="['admin']" routerLink="leave/apply" >Apply Leave</a></li>
               <li><a routerLink="configuration/leave" *ngxPermissionsOnly="['admin']">Create Leave</a></li>
-              <li><a routerLink="configuration/leave/show" *ngxPermissionsOnly="['admin']">Show Leave</a></li>
+              <li><a routerLink="configuration/leave/show" *ngxPermissionsOnly="['admin','Manager','Hr']">Show Leave</a></li>
               <li><a routerLink="leave/summery" *ngxPermissionsOnly="['admin']">Leave Summery</a></li>
             </ul>
           </li>
