--- a/frontend/src/app/components/configuration/dept-wise-roster/dept-wise-roster.component.html
+++ b/frontend/src/app/components/configuration/dept-wise-roster/dept-wise-roster.component.html
@@ -1,45 +1,3 @@
-<!--modal-->
-<ng-template #content let-c="close" let-d="dismiss" >
-  <div class="modal-header">
-    <h4 class="modal-title">Change Roster</h4>
-    <button type="button" class="close" aria-label="Close" (click)="modalClose()">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  <div class="modal-body">
-
-    <div class="row" >
-
-      <div class="form-group col-md-3">
-        <label>{{ChangeRosterInfo[0]['shiftName']}}</label>
-      </div>
-      <div class="form-group col-md-9">
-        <label>Employees</label>
-
-        <ng-multiselect-dropdown
-          [placeholder]="'Select Employees'"
-          [data]="employees"
-          [(ngModel)]="selectedDropDownEmp"
-          [settings]="dropdownSettingsEmp"
-
-        >
-        </ng-multiselect-dropdown>
-
-      </div>
-
-
-
-
-
-
-
-    </div>
-
-  </div>
-</ng-template>
-
-
-
 
 <div class="container-fluid">
   <div class="card">
@@ -70,7 +28,7 @@
 
         <div class="form-group col-md-4">
           <label>Roster Info</label>
-          <select class="form-control" id="RosterInfo"  name="RosterInfo">
+          <select class="form-control" id="RosterInfo" (change)="rosterChange()" name="RosterInfo">
             <option value="">Select Roster</option>
             <option *ngFor="let RI of RosterInfo" value="{{RI.shiftId}}">{{RI.shiftName}}</option>
 
@@ -85,7 +43,8 @@
 
         <div class="form-group col-md-3 ">
 
-          <button class="btn btn-success" (click)="searchRoster()" style="margin-top: 25px;">Search</button>
+          <button class="btn btn-success" (click)="searchRoster()" style="margin-top: 25px;">Search from Static</button> &nbsp;&nbsp;
+          <button class="btn btn-danger" (click)="findSetRoster()" style="margin-top: 25px;">Search from Set Roster</button>
         </div>
 
 
@@ -95,14 +54,13 @@
 
     </div>
 
-    <div class="card-body">
+    <div *ngIf="showTable" class="card-body">
       <div class="row">
         <table class="table table-striped table-hover">
             <thead>
               <tr>
-
-
-
+                <th>duty Employee</th>
+                <th>Off Duty Employee</th>
 
               </tr>
 
@@ -110,9 +68,83 @@
           <tbody>
             <tr>
 
+              <td>
+                <ng-multiselect-dropdown
+                  [placeholder]="'Select Employees'"
+                  [data]="employees"
+                  [(ngModel)]="selectedDropDownEmpduty"
+                  [settings]="dropdownSettingsEmpduty"
+                  (onSelect)="onItemSelect($event)"
+                  (onDeSelect)="onItemDeSelect($event)"
 
+                >
+                </ng-multiselect-dropdown>
+              </td>
+              <td>
+                <ng-multiselect-dropdown
+                  [placeholder]="'Select Employees'"
+                  [data]="employees"
+                  [(ngModel)]="selectedDropDownEmpOffduty"
+                  [settings]="dropdownSettingsEmpOffduty"
+                  (onSelect)="onItemSelectEmpOffduty($event)"
+                  (onDeSelect)="onItemDeSelectEmpOffduty($event)"
+
+                >
+                </ng-multiselect-dropdown>
+              </td>
 
             </tr>
+          <tr>
+            <td colspan="2">
+
+                <button class="btn btn-success" (click)="submitRoster()" style="margin-top: 25px;">Submit</button>
+
+            </td>
+          </tr>
+          </tbody>
+
+
+
+
+        </table>
+
+      </div>
+
+
+
+    </div>
+    <br>
+    <div *ngIf="showExistingData" class="card-body">
+      <div class="row">
+        <table class="table table-striped table-hover">
+            <thead>
+              <tr>
+                <th>duty Employee</th>
+                <th>Off Duty Employee</th>
+                <th>Action</th>
+              </tr>
+
+            </thead>
+          <tbody>
+            <tr>
+
+              <td>
+                <span *ngFor="let ERD of existingRosterData['duty'];">
+                  {{ERD['empFullname']+' ,'}}
+                </span>
+
+              </td>
+              <td>
+                <span *ngFor="let ERD of existingRosterData['Offduty'];">
+                  {{ERD['empFullname']+' ,'}}
+                </span>
+              </td>
+              <td>
+                <button class="btn btn-success" (click)="ChangeRoster()" style="margin-top: 25px;">Change</button>
+              </td>
+
+            </tr>
+
           </tbody>
 
 
