--- a/frontend/src/app/components/leave/add-leave/add-leave.component.html
+++ b/frontend/src/app/components/leave/add-leave/add-leave.component.html
@@ -41,7 +41,7 @@
         </div>
 
         <div class="form-group col-md-3">
-          <button class="btn btn-success btn-sm" >Apply Leave</button>
+          <button class="btn btn-success btn-sm" (click)="assignLeave()">Apply Leave</button>
         </div>
 
         <div class="col-md-12">
