--- a/frontend/src/app/components/configuration/govment-holiday/govment-holiday.component.html
+++ b/frontend/src/app/components/configuration/govment-holiday/govment-holiday.component.html
@@ -164,7 +164,8 @@
         <th>Purpose</th>
         <th>Status</th>
         <th>Created By</th>
-        <th>Action</th>
+
+        <th *ngIf="editShow">Action</th>
 
 
 
