--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -155,7 +155,7 @@
             <ul class="submenu">
 <!--              <li><a routerLink="leave/apply">Apply Leave</a></li>-->
 <!--              <li><a routerLink="configuration/govtHoliday" *ngxPermissionsOnly="['admin']">Create Holiday</a></li>-->
-              <li><a routerLink="configuration/govtHoliday/show" *ngxPermissionsOnly="['admin']">Show Holiday</a></li>
+              <li><a routerLink="configuration/govtHoliday/show" >Show Holiday</a></li>
 
             </ul>
           </li>
