--- a/frontend/src/app/components/user/basic-info/basic-info.component.html
+++ b/frontend/src/app/components/user/basic-info/basic-info.component.html
@@ -33,33 +33,33 @@
       </div>
 
       <div class="form-group col-md-2">
-        <label>Apartment / Unit# </label>
+        <label>Apartment / Unit# <span style="color: red">*</span> </label>
         <input type="text" class="form-control" name="apartmentUnit"  placeholder="Apartment Unit" [(ngModel)]="employeeBasicForm.apartmentUnit" >
       </div>
 
       <div class="form-group col-md-2">
-        <label>City </label>
+        <label>City <span style="color: red">*</span></label>
         <input type="text" class="form-control" name="city" placeholder="City" [(ngModel)]="employeeBasicForm.city" >
       </div>
 
       <div class="form-group col-md-2">
-        <label>State </label>
+        <label>State <span style="color: red">*</span></label>
         <input type="text" class="form-control" name="state" placeholder="State" [(ngModel)]="employeeBasicForm.state" >
       </div>
 
       <div class="form-group col-md-2">
-        <label>Zip Code </label>
+        <label>Zip Code <span style="color: red">*</span></label>
         <input type="text" class="form-control" name="zipCode" placeholder="Zip Code" [(ngModel)]="employeeBasicForm.zipCode" >
       </div>
 
 
       <div class="form-group col-md-2">
-        <label>Home Phone</label>
+        <label>Home Phone <span style="color: red">*</span></label>
         <input type="text" class="form-control" name="homePhone" placeholder="Home Phone" [(ngModel)]="employeeBasicForm.homePhone" required>
       </div>
 
       <div class="form-group col-md-2">
-        <label>Alternative Phone</label>
+        <label>Alternative Phone <span style="color: red">*</span></label>
         <input type="text" class="form-control" name="contactNo" placeholder="Alternative phone" [(ngModel)]="employeeBasicForm.alterContactNo" required>
       </div>
 
@@ -96,7 +96,7 @@
       </div>
 
       <div class="form-group col-md-2">
-        <label>Marital Status </label>
+        <label>Marital Status <span style="color: red">*</span></label>
         <select name="maritalStatus" class="form-control" [(ngModel)]="employeeBasicForm.maritalStatus">
           <option value="married">Married</option>
           <option value="unmarried">Unmarried</option>
