--- a/frontend/src/app/components/user/joining-info/joining-info.component.html
+++ b/frontend/src/app/components/user/joining-info/joining-info.component.html
@@ -40,7 +40,7 @@
       </div>
 
       <div class="form-group col-md-2">
-        <label>Working Location</label>
+        <label>Working Location <span style="color: red">*</span></label>
         <input type="text" name="workingLocation" placeholder="Working Location" [(ngModel)]="employeeJoiningForm.workingLocation" class="form-control">
       </div>
 
@@ -197,7 +197,7 @@
 
       <!--Leave Limit-->
       <div class="form-group col-md-12">
-        <h5 align="center">Leave Limit</h5>
+        <h3 align="center">Leave Limit</h3>
         <hr>
       </div>
 
