--- a/frontend/src/app/components/user/basic-info/basic-info.component.html
+++ b/frontend/src/app/components/user/basic-info/basic-info.component.html
@@ -105,7 +105,7 @@
 
       <div class="form-group col-md-8">
         <label>Image</label>
-        <input type="file" class="form-control" name="photo" (change)="onFileSelected($event)" placeholder="image">
+        <input type="file" class="form-control" name="photo" id="photo" (change)="onFileSelected($event)" placeholder="image">
       </div>
       <div class="form-group col-md-4">
       </div>
