--- a/frontend/src/app/components/leave/leave-summery/leave-summery.component.html
+++ b/frontend/src/app/components/leave/leave-summery/leave-summery.component.html
@@ -144,7 +144,7 @@
   <div class="card">
 
     <div class="card-header-pills">
-      <h3 class="col-md-12" align="center"> Showing Leave Requests</h3>
+      <h3 class="col-md-12" align="center"> Showing Approved Leave</h3>
     </div>
 
     <div class="card-body">
