--- a/frontend/src/app/components/configuration/leave/leave.component.html
+++ b/frontend/src/app/components/configuration/leave/leave.component.html
@@ -41,8 +41,8 @@
         <table datatable class="table" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
             <thead>
                 <tr>
-                    <th style="text-align: center"><input type="checkbox" class="SelectAll" id="selectall2"  (click)="selectAll()"/></th>
-                    <th>Name</th>
+                    <th style="text-align: center">select one</th>
+                    <th>First Name</th>
                     <th>Employee ID</th>
                     <th>Weekend</th>
                     <th>Action</th>
