--- a/frontend/src/app/components/configuration/department/add-department/add-department.component.html
+++ b/frontend/src/app/components/configuration/department/add-department/add-department.component.html
@@ -24,7 +24,7 @@
         <input type="text" class="form-control" placeholder="Dept Head Name" name="departmentHead" [(ngModel)]="departmentField.deptHead">
       </div>
 
-      <div class="form-group col-md-6">
+      <div class="form-group col-md-4">
         <label>Department Parent</label>
         <select  class="form-control" id="deptLevel" [(ngModel)]="departmentField.fkDeptParent" >
           <option value="">Select Parent</option>
@@ -40,6 +40,14 @@
         <select name="status" class="form-control" [(ngModel)]="departmentField.status">
           <option value="active">Active</option>
           <option value="inactive">Inactive</option>
+        </select>
+      </div>
+
+      <div class="form-group col-md-4">
+        <label>Roster Type <span style="color: red">*</span></label>
+        <select name="rosterType" class="form-control" [(ngModel)]="departmentField.rosterType">
+          <option value="1">Single</option>
+          <option value="2">Multiple</option>
         </select>
       </div>
 
@@ -79,6 +87,7 @@
         <th>ID</th>
         <th>Department Name</th>
         <th>Status</th>
+        <th>Roster Type</th>
         <th>Action</th>
       </tr>
       </thead>
@@ -87,6 +96,8 @@
         <td>{{dept.id}}</td>
         <td>{{dept.departmentName | titlecase}}</td>
         <td>{{dept.status | titlecase}}</td>
+        <td *ngIf="dept.rosterType==1">Single Roster</td>
+        <td *ngIf="dept.rosterType==2">Mupltiple Roster</td>
         <td>
           <!--<button class="btn btn-danger" (click)="deleteUser(user)"> Delete</button>-->
           <button class="btn btn-danger" (click)="editDept(dept)" style="margin-left: 20px;"> Edit</button>
