--- a/frontend/src/app/components/configuration/dept-wise-static-roster/dept-wise-static-roster.component.html
+++ b/frontend/src/app/components/configuration/dept-wise-static-roster/dept-wise-static-roster.component.html
@@ -60,7 +60,8 @@
 
 <div class="container-fluid">
   <div class="card">
-    <div class="card-header"><h2>Department Wise Roster</h2></div>
+    <div class="card-header"><h2>Department Wise Roster</h2> <h4>Multiple Roster Departments</h4></div>
+
 
     <div class="card-body">
       <div class="row">
