--- a/frontend/src/app/components/leave/leave-summery/leave-summery.component.html
+++ b/frontend/src/app/components/leave/leave-summery/leave-summery.component.html
@@ -185,10 +185,14 @@
         <tr>
           <th>First Name</th>
           <th>Last Name</th>
-          <th>Sick</th>
           <th>Casual</th>
-          <th>Leave Without Pay</th>
-          <th>Marriage</th>
+          <th>Sick</th>
+          <th>Leave without pay</th>
+          <th>Marrige</th>
+          <th>Earn</th>
+          <th>Maternity</th>
+          <th>Paternity</th>
+          <th>Anual</th>
           <th>Total</th>
           <th>Action</th>
 
