--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,3 +1,51 @@
+
+<!--modal-->
+<ng-template #passwordChange let-c="close" let-d="dismiss" >
+  <div class="modal-header">
+    <h2 class="modal-title">Password Change</h2>
+    <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+
+
+
+      <div class="row">
+
+<!--        <div class="form-group col-md-12">-->
+<!--          <label>Old Password</label>-->
+<!--          <input class="form-control" id="old_password" name="password" type="password" placeholder="Old Password" >-->
+<!--        </div>-->
+
+        <div class="form-group col-md-6">
+
+          <label>New Password</label>
+          <input class="form-control" id="new_password" name="new_password" type="password" placeholder="New Password">
+        </div>
+        <div class="form-group col-md-6">
+
+          <label>Confirm New Password</label>
+          <input class="form-control" id="confirm_new_password" name="confirm_new_password" type="password" placeholder="Confirm New Password">
+        </div>
+
+        <div class="form-group col-md-12">
+
+          <button class="btn btn-success pull-left" (click)="submitPasswordChange()" >Submit</button>
+
+        </div>
+
+
+
+      </div>
+
+
+
+
+  </div>
+</ng-template>
+
+
 <!-- Navigation Bar-->
 <header id="topnav" *ngIf="nav.visible">
   <div class="topbar-main">
@@ -24,6 +72,7 @@
             </a>
             <div class="dropdown-menu dropdown-menu-right profile-dropdown ">
               <a class="dropdown-item" href="#"><i class="dripicons-user text-muted"></i> Profile</a>
+              <a class="dropdown-item" (click)="ChangePass(passwordChange)">Password Change</a>
 <!--              <a class="dropdown-item" href="#"><i class="dripicons-wallet text-muted"></i> My Wallet</a>-->
 <!--              <a class="dropdown-item" href="#"><span class="badge badge-success pull-right m-t-5">5</span><i class="dripicons-gear text-muted"></i> Settings</a>-->
 <!--              <a class="dropdown-item" href="#" (click)="whoAmI($event)"><i class="dripicons-lock text-muted"></i> Who Am I</a>-->
@@ -107,6 +156,10 @@
 
                 </ul>
               </li>
+               <li><a *ngxPermissionsOnly="['admin']" routerLink="configuration/employee/passwordChange">Change Password</a></li>
+
+
+
 
 
 <!--              <li class="has-submenu" *ngxPermissionsOnly="['admin']">-->
