--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -77,7 +77,7 @@
 <!--              <a class="dropdown-item" href="#"><span class="badge badge-success pull-right m-t-5">5</span><i class="dripicons-gear text-muted"></i> Settings</a>-->
 <!--              <a class="dropdown-item" href="#" (click)="whoAmI($event)"><i class="dripicons-lock text-muted"></i> Who Am I</a>-->
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#" (click)="logout($event)"><i class="dripicons-exit text-muted"></i> Logout</a>
+              <a class="dropdown-item" style="cursor: pointer" (click)="logout($event)"><i class="dripicons-exit text-muted"></i> Logout</a>
             </div>
           </li>
           <li class="menu-item list-inline-item">
@@ -157,6 +157,7 @@
                 </ul>
               </li>
                <li><a *ngxPermissionsOnly="['admin']" routerLink="configuration/employee/passwordChange">Change Password</a></li>
+               <li><a *ngxPermissionsOnly="['admin']" style="cursor: pointer" (click)="databaseDownload()" >Download Database</a></li>
 
 
 
