--- a/frontend/src/app/components/configuration/govment-holiday/govment-holiday.component.html
+++ b/frontend/src/app/components/configuration/govment-holiday/govment-holiday.component.html
@@ -1,5 +1,5 @@
 
-<!--modal-->
+<!--Add New Govment Holiday Modal-->
 <ng-template #addGovtHoliday let-c="close" let-d="dismiss" >
   <div class="modal-header">
     <h2 class="modal-title">Add Govment Holiday</h2>
@@ -56,10 +56,10 @@
   </div>
 </ng-template>
 
-<!--modal-->
+<!-- Update Govment Holiday Modal-->
 <ng-template #editGovtHoliday let-c="close" let-d="dismiss" >
   <div class="modal-header">
-    <h4 class="modal-title">Add Govment Holiday</h4>
+    <h4 class="modal-title">Update Govment Holiday </h4>
     <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
@@ -112,7 +112,7 @@
 </ng-template>
 
 
-
+<!-- Govment Holidays Information-->
 <div class="card">
   <div class="card-header">
     <h2>Govment Holidays Information</h2>
