--- a/frontend/src/app/components/user/add-employee/add-employee.component.html
+++ b/frontend/src/app/components/user/add-employee/add-employee.component.html
@@ -7,6 +7,7 @@
         <li class="list-group-item " [class.active]="infoFlag == 1"  (click)="onInfoClick(1)"><button style="background: none; color: white; border: none;" class="btn btn-block ">Basic Info </button></li>
 
         <li class="list-group-item" [class.active]="infoFlag == 4"><button style="background: none; color: white; border: none;" class="btn btn-block" (click)="onInfoClick(4)">Joining Info</button> </li>
+        <li class="list-group-item" [class.active]="infoFlag == 4"><button style="background: none; color: white; border: none;" class="btn btn-block" (click)="onInfoClick(4)">User Info View</button> </li>
 
 
       </ul>
