--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,1 +1,17 @@
-<p>Home Works!</p>
+<div class="card container-fluid">
+  <div class="card-header-pills">
+    <h2 align="center" style="font-family: 'Righteous', cursive;">{{designation}} Dashboard</h2>
+  </div>
+  <div class="card-body">
+    <div *ngIf="showTotalDiv" class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title">Total Employee</h5>
+        <p class="card-text"></p>
+
+      </div>
+    </div>
+  </div>
+
+</div>
+
+
