--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -72,7 +72,7 @@
             </a>
             <div class="dropdown-menu dropdown-menu-right profile-dropdown ">
               <a class="dropdown-item" href="#"><i class="dripicons-user text-muted"></i> Profile</a>
-              <a class="dropdown-item" (click)="ChangePass(passwordChange)">Password Change</a>
+              <a class="dropdown-item" style="cursor: pointer" (click)="ChangePass(passwordChange)">Password Change</a>
 <!--              <a class="dropdown-item" href="#"><i class="dripicons-wallet text-muted"></i> My Wallet</a>-->
 <!--              <a class="dropdown-item" href="#"><span class="badge badge-success pull-right m-t-5">5</span><i class="dripicons-gear text-muted"></i> Settings</a>-->
 <!--              <a class="dropdown-item" href="#" (click)="whoAmI($event)"><i class="dripicons-lock text-muted"></i> Who Am I</a>-->
@@ -195,13 +195,14 @@
             </ul>
           </li>
 
-          <li class="has-submenu">
+          <li  class="has-submenu">
             <a href="#">Leave</a>
             <ul class="submenu">
               <li><a *ngxPermissionsExcept="['admin']" routerLink="leave/apply" >Apply Leave</a></li>
               <li><a routerLink="configuration/leave" *ngxPermissionsOnly="['admin']">Create Leave</a></li>
               <li><a routerLink="configuration/leave/show" *ngxPermissionsOnly="['admin','Manager','Hr']">Show Leave</a></li>
-              <li><a routerLink="leave/summery" *ngxPermissionsOnly="['admin']">Leave Summery</a></li>
+              <li><a routerLink="leave/summery">Leave Summery</a></li>
+
             </ul>
           </li>
           <li class="has-submenu">
@@ -214,10 +215,10 @@
             </ul>
           </li>
 
-          <li class="has-submenu">
+          <li *ngxPermissionsOnly="['admin']" class="has-submenu">
             <a >Adjustment</a>
             <ul class="submenu">
-              <li><a routerLink="adjustment/showAdjustment" *ngxPermissionsOnly="['admin']">Show Adjustment</a></li>
+              <li><a routerLink="adjustment/showAdjustment">Show Adjustment</a></li>
 
             </ul>
           </li>
