--- a/frontend/src/app/components/user/joining-info/joining-info.component.html
+++ b/frontend/src/app/components/user/joining-info/joining-info.component.html
@@ -1,6 +1,7 @@
 <div class="card">
   <div class="card-header" style="text-align: center;">
     <h2>Joining Information </h2>
+    <a style="text-align: right" href="{{previousURL}}">{{previousURL}}</a>
   </div>
 
   <div class="card-body">
