--- a/frontend/src/app/components/user/basic-info/basic-info.component.html
+++ b/frontend/src/app/components/user/basic-info/basic-info.component.html
@@ -1,6 +1,9 @@
 <div class="card" >
   <div class="card-header" style="text-align: center;">
+
     <h2>Basic Information </h2>
+    <a style="text-align: right" href="{{previousURL}}">{{previousURL}}</a>
+
   </div>
 
   <div class="card-body">
