--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -7,7 +7,12 @@
       <div class="card-body">
         <h5 class="card-title">Total Employee</h5>
         <p class="card-subtitle">{{activeEmp}}</p>
-
+      </div>
+    </div>
+    <div *ngIf="showTotalDiv1" class="card" style="width: 18rem;color: white;background-color: #0b8ddd">
+      <div class="card-body">
+        <h5 class="card-title">Total Inactive Employee</h5>
+        <p class="card-subtitle">{{InActiveEmp}}</p>
       </div>
     </div>
 
