--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -138,8 +138,10 @@
                   <li><a routerLink="configuration/roster/dept-wise-static-roster">department wise Static Roster</a></li>
                   <li><a routerLink="configuration/roster/dept-wise-assign">department wise Roster Assign</a></li>
                   <li><a routerLink="configuration/not-shift-assigned-list">Roster not Assigned list</a></li>
+
                 </ul>
               </li>
+              <li *ngxPermissionsOnly="['admin']" routerLinkActive="active"><a routerLink="configuration/punch-time/edit">Punch Time Customaization</a></li>
               <li class="has-submenu" *ngxPermissionsOnly="['admin']">
                 <a href="#">Department</a>
                 <ul class="submenu">
@@ -158,22 +160,6 @@
               </li>
                <li><a *ngxPermissionsOnly="['admin']" routerLink="configuration/employee/passwordChange">Change Password</a></li>
                <li><a *ngxPermissionsOnly="['admin']" style="cursor: pointer" (click)="databaseDownload()" >Download Database</a></li>
-
-
-
-
-
-<!--              <li class="has-submenu" *ngxPermissionsOnly="['admin']">-->
-<!--                <a href="#">Roster</a>-->
-<!--                <ul class="submenu">-->
-<!--                  <li><a routerLink="configuration/shift">All Roster</a></li>-->
-
-<!--                </ul>-->
-<!--              </li>-->
-
-
-
-
 
 
 
