--- a/frontend/src/app/components/configuration/email/add-email/add-email.component.html
+++ b/frontend/src/app/components/configuration/email/add-email/add-email.component.html
@@ -44,7 +44,7 @@
       </thead>
       <tbody>
       <tr *ngFor="let email of emails">
-        <td>{{email.email_id}}</td>
+        <td>{{email.id}}</td>
         <td>{{email.email | titlecase}}</td>
         <td>{{email.status | titlecase}}</td>
         <td>
