--- a/frontend/src/app/components/report/attendance/attendance.component.html
+++ b/frontend/src/app/components/report/attendance/attendance.component.html
@@ -72,21 +72,13 @@
                 <option value="7">Roster Wise Report-1</option>
                 <option value="8">Roster Wise Report-2</option>
                 <option value="9">Roster Wise Report-3</option>
+                <option value="10">Monthly Report with Salary</option>
 
             </select>
 
 
         </div>
-        <!--        <div class="form-group col-md-8">-->
 
-        <!--          <label>-->
-
-        <!--          <input style="margin-top: 40px" type="checkbox" id="notAssignedRoster"/> Employee With out Roster-->
-        <!--          </label>-->
-
-
-
-        <!--        </div>-->
 
 
     </div>
