--- a/frontend/src/app/components/user/joining-info/joining-info.component.html
+++ b/frontend/src/app/components/user/joining-info/joining-info.component.html
@@ -134,6 +134,16 @@
         <input type="text" name="salary" placeholder="Salary" [(ngModel)]="employeeJoiningForm.salary" class="form-control" required>
       </div>
 
+        <div class="form-group col-md-2">
+          <label>provident Fund</label>
+          <select class="form-control" [(ngModel)]="employeeJoiningForm.pf">
+            <option value=" ">Select provident fund</option>
+            <option value="1">Yes</option>
+            <option value="0">No</option>
+
+          </select>
+        </div>
+
 
       <div class="form-group col-md-12">
       <div class="card-header" style="text-align: center;">
